--- a/views/pages/register_seller.ejs
+++ b/views/pages/register_seller.ejs
@@ -212,7 +212,7 @@
                     <label for="linkedin" class="col-sm-2 col-form-label">Linkedin</label>
                     <div class="col">
                         <input type="text" id="linkedin" placeholder="Linkedin Account link ..."
-                            oninput="this.className = ''" name="linkedin">
+                            oninput="this.className = ''" name="linkedin" required>
                     </div>
                 </div>
             </div>
