--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -39,7 +39,7 @@
 									<span class="fa fa-star checked gold"></span>
 								</div>
 								<div class="right--most">
-										<h3 class="align-star naming--pos" id="seller_name"><a href="/profile/<%= service.seller_id %>" class="hover:cursor-pointer"><%= service.seller_name %></a></h3>
+										<h3 class="align-star naming--pos" ><a href="/profile/<%= service.seller_id %>" class="hover:cursor-pointer" id="seller_name"><%= service.seller_name %></a></h3>
 								</div>
 							</div>
 							<article class="info-block md:decoration-4">
