--- a/public/css/home2.css
+++ b/public/css/home2.css
@@ -58,8 +58,9 @@ img {
 
 .boxes {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: auto auto auto;
   gap: 30px;
+  height: 100%;
   max-width: 1000px;
   margin: 10px auto;
 }
@@ -181,6 +182,9 @@ img {
   color: #fff;
 }
 
+.adjust{
+  height: 125px;
+}
 .name-profession .name {
   font-size: 20px;
   font-weight: 600;
