changed few files

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -184,6 +184,10 @@
           el: ".swiper-pagination",
           clickable: true,
         },
+        autoplay: {
+          delay: 3000,
+          waitForTransition: true
+        },
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
