done with animations and errors

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -91,11 +91,11 @@
 <body>
 
      <div class="sign-suc-message">
-          <p class="lg">Signup Successful !</p>
+          <p class="lg">Signup Successful </p>
      </div>
 
      <div class="sign-suc-message xism">
-          <p class="lg">Login Successful !</p>
+          <p class="lg">Login Successful </p>
      </div>
 
      <div class="spinnerrr spin-hide"></div>
@@ -146,6 +146,9 @@
                     <form action="#" id="signin-form" method="post" autocomplete="off">
                          <h2>Sign in</h2>
                          <input type="email" id="email" placeholder="Email *" required />
+                         <span class="total-summary hide err">
+                              Invalid mail
+                         </span>
                          <input type="password" id="password" placeholder="Password *" required />
                          <button type="submit" id="submit2">Sign In</button>
                          <div class="wrap-g-c">
