changed a few files

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -47,7 +47,7 @@
                          <div class="wrap-g-c">
                               <div class="continue-w-g">
                                    <ion-icon name="logo-google" class="g--icon">G</ion-icon>
-                                   <span class="g-span">Conitnue With Google</span>
+                                   <span class="g-span">Continue With Google</span>
                               </div>
                          </div>
                     </form>
@@ -61,7 +61,7 @@
                          <div class="wrap-g-c">
                               <div class="continue-w-g">
                                    <ion-icon name="logo-google" class="g--icon">G</ion-icon>
-                                   <span class="g-span">Conitnue With Google</span>
+                                   <span class="g-span">Continue With Google</span>
                               </div>
                          </div>
                     </form>
